# ariadne

./: .gitignore  README.md  pyproject.toml
examples/: __init__.py  compile_overhead_timing.py  gpu_batch_test.py  percent_split_real_model_test.py  real_model_functional_test.py  real_model_timing.py  replay_optimization_timing.py  retain_optimization_timing.py  split_inference_demo.py  split_training_demo.py  visualize_trace_demo.py
src/ariadne/: __init__.py  api.py  benchmark.py
src/ariadne/codegen/: __init__.py  interception_segments.py  python_codegen.py  segment_builder.py  templates.py
src/ariadne/compiler/: __init__.py  compile_policy.py  torch_compile.py
src/ariadne/pattern/: __init__.py  shape_pattern.py  split_spec.py  validator.py
src/ariadne/planner/: __init__.py  cost_model.py  frontier.py  selector.py
src/ariadne/runtime/: __init__.py  boundary.py  cache.py  replay_runtime.py  segment_runtime.py  train_runtime.py
src/ariadne/trace/: __init__.py  interception.py  tensor_meta.py  trace_plan.py  tracer.py
src/ariadne/validation/: __init__.py  dynamic_batch.py  equivalence.py  gradient.py
src/ariadne/visualization/: __init__.py  export.py  graph_model.py  graphviz_renderer.py  split_overlay.py  styles.py  trace_to_graph.py
tests/: test_dynamic_batch.py  test_frontier_planner.py  test_interception_tracer.py  test_replay_runtime.py  test_segment_runtime.py  test_split_spec.py  test_split_training.py  test_trace_plan.py  test_visualization_candidates.py  test_visualization_split_graph.py  test_visualization_trace_graph.py
tests/integration/: test_real_models.py  test_visualization_real_models.py
