[project]
name = "ariadne"
version = "0.1.0"
description = "Dynamic-batch split replay and split training runtime for PyTorch models."
readme = "README.md"
authors = [
    { name = "whisperLiang", email = "1851438730@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.11.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
integration = [
    "rfdetr>=1.6.5",
    "ultralytics>=8.4.41",
]

[project.scripts]
ariadne = "ariadne:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
markers = [
    "integration: requires optional real-model dependencies and may download model weights",
]
